force-app/main/default/objects/Picklist_Dependency_Value__c/Picklist_Dependency_Value__c.object-meta.xml
<CustomObject>
    <label>Picklist Dependency Value</label>
    <nameField>
        <displayFormat>PDV-{000000}</displayFormat>
        <label>Picklist Dependency Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Dependency Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>