force-app/main/default/objects/Picklist_Dependency_Value__c/fields/Dependent_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_Value__c</fullName>
    <label>Dependent Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>