force-app/main/default/objects/Picklist_Dependency_Value__c/fields/Picklist_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Dependency__c</fullName>
    <label>Picklist Dependency</label>
    <referenceTo>Picklist_Dependency__c</referenceTo>
    <relationshipLabel>Picklist Dependency Values</relationshipLabel>
    <relationshipName>Picklist_Dependency_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>